// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeContainerItemDirective getMapping should render a mapped container item 1`] = `
<div
  id="root0"
>
  
  <br-container-item-test>
    <a>
      something
    </a>
  </br-container-item-test>
</div>
`;

exports[`BrNodeContainerItemDirective ngOnChanges should react on update evants 1`] = `
<div
  id="root1"
>
  
  <br-container-item-test>
    <a>
      updated
    </a>
  </br-container-item-test>
</div>
`;
